--- a/cliente/package.json
+++ b/cliente/package.json
@@ -16,10 +16,11 @@
     "@mui/material": "^6.1.10",
     "browser-router": "^0.2.0",
     "firebase": "^11.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "vite-project": "file:"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
