--- a/servidor/package.json
+++ b/servidor/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "servidor": "file:"
+    "express": "^4.21.1"
   }
 }
